Added Unit Tests and Loggers

--- a/gamma-backend/pom.xml
+++ b/gamma-backend/pom.xml
@@ -70,7 +70,12 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.3.3</version>
 		</dependency>
-  </dependencies>
+		  <dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>1.5.6</version>
+		  </dependency>
+		</dependencies>
 	<build>
 		<plugins>
 			<plugin>
