--- a/gamma-backend/src/main/resources/application.properties
+++ b/gamma-backend/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/colegio_gamma?useSSL=false&s
 spring.datasource.username=admin
 spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
