Added Documentation an Production Redirection

--- a/gamma/package.json
+++ b/gamma/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gamma",
-    "homepage": "https://RicardoAG0312.github.io/gamma",
+    "homepage": "https://gamma-frontend-131bd.web.app",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
